# umide

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  Makefile  NOTICE  README.md  lapce.spec  test_bezel.scpt  test_sc  test_sc.m  umide.spec
.agent/rules/: umide-road-map-part2.md  umide-roadmap.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
crates/umide/: Cargo.toml
crates/umide/benches/: visual_line.rs
crates/umide/examples/: cli_perm_smoke.rs  cli_smoke.rs  codex_smoke.rs  gemini_smoke.rs  grab_frame.rs  live_emulator.rs  tap_test.rs
crates/umide/src/: about.rs  ai.rs  alert.rs  app.rs  code_action.rs  code_lens.rs  command.rs  completion.rs  config.rs  db.rs  debug.rs  doc.rs  editor.rs  editor_tab.rs  file_dialog.rs  find.rs  focus_text.rs  global_search.rs  history.rs  inline_completion.rs  keymap.rs  keypress.rs  lib.rs  main_split.rs  markdown.rs  palette.rs  plugin.rs  project.rs  proxy.rs  rename.rs  settings.rs  source_control.rs  status.rs  text_area.rs  text_input.rs  title.rs  update.rs  web_link.rs  window.rs  window_tab.rs  (+1 more)
crates/umide/src/ai/cli/: claude.rs  codex.rs  detect.rs  device_server.rs  framer.rs  gemini.rs  mod.rs  permission_server.rs  proc_group.rs  runner.rs
crates/umide/src/app/: grammars.rs  logging.rs
crates/umide/src/config/: color.rs  color_theme.rs  core.rs  icon.rs  svg.rs  terminal.rs
crates/umide/src/editor/: diff.rs  gutter.rs  location.rs  view.rs
crates/umide/src/file_explorer/: data.rs  node.rs  view.rs
crates/umide/src/keypress/: condition.rs  key.rs  keymap.rs  loader.rs  press.rs
crates/umide/src/palette/: item.rs  kind.rs
crates/umide/src/panel/: ai_assistant_view.rs  ai_sessions.rs  call_hierarchy_view.rs  data.rs  debug_view.rs  device_logs_stream.rs  device_logs_view.rs  document_symbol.rs  emulator_host_view.rs  emulator_native_view.rs  emulator_stream.rs  emulator_view.rs  global_search_view.rs  implementation_view.rs  kind.rs  mod.rs  plugin_view.rs  problem_view.rs  source_control_view.rs  terminal_view.rs  video_view.rs  view.rs
crates/umide/src/proxy/: remote.rs
crates/umide/src/terminal/: data.rs  event.rs  panel.rs  raw.rs  tab.rs  view.rs
crates/umide_agent/: Cargo.toml
crates/umide_agent/src/: agent.rs  backend.rs  client.rs  error.rs  event.rs  lib.rs  openai.rs  provider.rs  tools.rs  types.rs
crates/umide_emulator/: Cargo.toml  build.rs
crates/umide_emulator/proto/: emulator_controller.proto
crates/umide_emulator/src/: android.rs  common.rs  decoder.rs  grpc_client.rs  ios.rs  lib.rs  native_view.rs
crates/umide_emulator/src/video/: fallback.rs  h264_source.rs  macos.rs  macos_hardware.rs  mod.rs  openh264.rs
crates/umide_native/: Cargo.toml  build.rs
crates/umide_native/cpp/: macos_surface.mm
crates/umide_native/cpp/include/: native_surface.h  umide_native_api.h
crates/umide_native/cpp/src/: emulator.h  emulator_api.cpp
crates/umide_native/cpp/src/macos/: macos_emulator.mm
crates/umide_native/src/: emulator.rs  lib.rs  macos.rs  simulator.rs  wgpu_texture.rs
defaults/: dark-theme.toml  icon-theme.toml  light-theme.toml  settings.toml
docs/: DEVELOPING.md  RELEASE-AND-PARITY.md  ROADMAP.md  architecture.md  building-from-source.md  index.html  installing-with-package-manager.md  new-release.md  phase5_hardware_decode.md  phase5_video_decoder.md  phase5_wgpu_video.md
extra/: proxy.ps1
extra/linux/: dev.lapce.lapce.metainfo.xml  dev.umide.umide.desktop  dev.umide.umide.metainfo.xml  umide.desktop
extra/linux/docker/fedora/: Dockerfile
extra/macos/: package_app.sh
extra/macos/Lapce.app/Contents/: Info.plist
extra/macos/UMIDE.app/Contents/: Info.plist
extra/macos/UMIDE.app/Contents/Resources/: umide.icns
extra/windows/wix/: lapce.wxs  umide.wxs
lapce-proxy/: Cargo.toml
umide-core/: Cargo.toml  build.rs
umide-core/src/: directory.rs  language.rs  style.rs
umide-core/src/syntax/: highlight.rs  mod.rs
umide-proxy/: Cargo.toml
umide-proxy/src/: buffer.rs  cli.rs  dispatch.rs  lib.rs  terminal.rs
umide-proxy/src/plugin/: catalog.rs  dap.rs  lsp.rs  mod.rs  psp.rs  wasi.rs
umide-proxy/src/plugin/wasi/: tests.rs
umide-proxy/src/plugin/wasi/plugins/some_author.test-plugin-one/: volt.toml
umide-proxy/src/plugin/wasi/plugins/some_author.test-plugin-two/: volt.toml
umide-rpc/: Cargo.toml
umide-rpc/src/: file.rs
