[package]
name         = "umide"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
default-run  = "umide"

[dependencies]
umide-app = { path = "./crates/umide" }
umide-proxy = { path = "./umide-proxy" }
floem_renderer = { workspace = true }

[[bin]]
name = "umide"
path = "crates/umide/src/bin/umide.rs"

[[bin]]
name = "umide-proxy"
path = "umide-proxy/src/bin/umide-proxy.rs"

[workspace]
members = ["crates/umide", "umide-proxy", "umide-rpc", "umide-core", "crates/umide_emulator", "crates/umide_native"]

[workspace.package]
version      = "0.1.2"
edition      = "2024"
rust-version = "1.87.0"
license      = "Apache-2.0"
homepage     = "https://github.com/bridgerust/umide"
authors      = ["KOLOGO JOSIAS <kologojosias@gmail.com>"]

[workspace.dependencies]
anyhow            = { version = "1.0" }
backtrace         = { version = "0.3" }
chrono            = { version = "0.4" }
clap              = { version = "4.5.60", default-features = false, features = ["std", "help", "usage", "derive"] }
crossbeam-channel = { version = "0.5.12" }
directories       = { version = "6.0.0" }
flate2            = { version = "1.1" }
git2              = { version = "0.20.4", features = ["vendored-openssl"] }
globset           = { version = "0.4.14" }
hashbrown         = { version = "0.16.1", features = ["serde"] }
im                = { version = "15.0.0", features = ["serde"] }
include_dir       = { version = "0.7" }
indexmap          = { version = "2.14", features = ["serde"] }
interprocess       = { version = "2.4.2" }
itertools         = { version = "0.14.0" }
notify             = { version = "8.2.0", features = ["serde"] }
once_cell         = { version = "1.21" }
parking_lot       = { version = "0.12.3" }
rayon             = { version = "1.12.0" }
regex             = { version = "1.12.3" }
remain            = { version = "0.2" }
semver            = { version = "1.0" }
reqwest           = { version = "0.13.3", features = ["blocking", "json", "socks"] }
serde             = { version = "1.0" }
serde_json        = { version = "1.0" }
smallvec          = { version = "1.15.1" }
strum             = { version = "0.27.1" }
strum_macros      = { version = "0.27.1" }
tar               = { version = "0.4" }
tempfile          = { version = "3.27.0" }
thiserror         = { version = "2.0.18" }
toml              = { version = "*" }
toml_edit         = { version = "0.22.20", features = ["serde"] }
url               = { version = "2.5.0" }
zstd              = { version = "0.13.3" }                                                                         # follow same version wasmtime-cache in lockfile

lsp-types = { version = "0.95.1", features = ["proposed"] }                                                  # not following semver, so should be locked to patch version updates only
psp-types = { path = "vendor/psp-types" }

lapce-xi-rope = { version = "0.4.0", features = ["serde"] }

umide-core  = { path = "./umide-core" }
umide-rpc   = { path = "./umide-rpc" }
umide-proxy = { path = "./umide-proxy" }
umide_emulator = { path = "./crates/umide_emulator" }
umide_native = { path = "./crates/umide_native" }

floem = { git = "https://github.com/bridgerust/floem", rev = "e880fd3e921215b1f8e31cb78a85f4c6b3aaa9e3", features = ["editor", "serde", "default-image-formats"] }
floem_renderer = { git = "https://github.com/bridgerust/floem", rev = "e880fd3e921215b1f8e31cb78a85f4c6b3aaa9e3", package = "floem_renderer" }
floem-editor-core = { git = "https://github.com/bridgerust/floem", rev = "e880fd3e921215b1f8e31cb78a85f4c6b3aaa9e3", package = "floem-editor-core", features = ["serde"] }
[patch.crates-io]
# Temporarily patch lsp-types with a version that adds message-type debug
lsp-types = { path = "vendor/lsp-types" }


[workspace.dependencies.tracing]
git     = "https://github.com/tokio-rs/tracing"
rev     = "908cc432a5994f6e17c8f36e13c217dc40085704"
package = "tracing"

[workspace.dependencies.tracing-log]
git     = "https://github.com/tokio-rs/tracing"
rev     = "908cc432a5994f6e17c8f36e13c217dc40085704"
package = "tracing-log"

[workspace.dependencies.tracing-subscriber]
git     = "https://github.com/tokio-rs/tracing"
rev     = "908cc432a5994f6e17c8f36e13c217dc40085704"
package = "tracing-subscriber"

[workspace.dependencies.tracing-appender]
git     = "https://github.com/tokio-rs/tracing"
rev     = "908cc432a5994f6e17c8f36e13c217dc40085704"
package = "tracing-appender"

[workspace.dependencies.alacritty_terminal]
git = "https://github.com/alacritty/alacritty"
rev = "cacdb5bb3b72bad2c729227537979d95af75978f"

[workspace.dependencies.windows-sys]
version  = "0"
features = ["Win32_Foundation"]

[profile.release-lto]
inherits      = "release"
lto           = true
codegen-units = 1

# A profile which compiles all (non-workspace) dependencies in release mode
# but Umide code in dev mode. This gives a good debugging experience for your
# code and fast performance of other people's code. After the initial
# build subsequent ones are as fast as dev mode builds.
# See https://doc.rust-lang.org/cargo/reference/profiles.html
# To use this profile:
#   cargo build --profile fastdev
#   cargo run --profile fastdev --bin lapce
[profile.fastdev.package."*"]
opt-level = 3

[profile.fastdev]
inherits = "dev"
