[package]
name = "umide_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Use tonic 0.12 for stable gRPC API
tonic = "0.12"
prost = "0.13"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
image = "0.25"
tokio-stream = "0.1"
thiserror = "2.0"
openh264 = "0.9.3"
h264-reader = "0.8.0"
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
video-toolbox-sys = "0.2.0"
core-media-sys = "0.1"
core-video-sys = "0.1"
core-foundation-sys = "0.8"
objc2 = "0.6.3"

[build-dependencies]
tonic-build = "0.12"
