[package]
name = "umide_native"
version = "0.1.0"
edition = "2021"
description = "Native GPU surface and texture sharing for UMIDE"
license = "Apache-2.0"

[lib]
crate-type = ["lib"]

[dependencies]
# For raw window/surface handle types
raw-window-handle = "0.6"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
# Metal bindings (for importing IOSurface as texture)
metal = "0.29"
# Core Foundation types
core-foundation = "0.10"
# Objective-C runtime
objc2 = "0.5"
block2 = "0.5"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
